--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Мишка</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>HTML Academy: Мишка</title>
+</head>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+<body>
+  <header class="header">
+    <a class="header__logo">
+      <img src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка" class="header__image">
+    </a>
+    <nav class="menu">
+      <button class="menu__btn" type="button">Открыть меню</button>
+      <div class="menu__toggle">
+        <ul class="menu__list">
+          <li class="menu__item"><a>Каталог товаров</a></li>
+          <li class="menu__item"><a href="#">Вязание на заказ</a></li>
+          <li class="menu__item">
+            <label><input type="search" placeholder="Поиск по сайту"></label>
+          </li>
+          <li class="menu__item"><a href="#">Корзина: пока пуста</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+</body>
 
-  </body>
 </html>
