created section handwork

--- a/source/index.html
+++ b/source/index.html
@@ -10,23 +10,59 @@
 
 <body>
   <header class="header">
-    <a class="header__logo">
-      <img src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка" class="header__image">
-    </a>
-    <nav class="menu">
-      <button class="menu__btn" type="button">Открыть меню</button>
-      <div class="menu__toggle">
-        <ul class="menu__list">
-          <li class="menu__item"><a>Каталог товаров</a></li>
-          <li class="menu__item"><a href="#">Вязание на заказ</a></li>
-          <li class="menu__item">
-            <label><input type="search" placeholder="Поиск по сайту"></label>
-          </li>
-          <li class="menu__item"><a href="#">Корзина: пока пуста</a></li>
-        </ul>
-      </div>
-    </nav>
+    <div class="container">
+      <a class="header__logo">
+        <img src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка" class="header__image">
+      </a>
+      <nav class="menu">
+        <button class="menu__btn" type="button">Открыть меню</button>
+        <div class="menu__toggle">
+          <ul class="menu__list">
+            <li class="menu__item"><a>Каталог товаров</a></li>
+            <li class="menu__item"><a href="#">Вязание на заказ</a></li>
+            <li class="menu__item">
+              <label><input type="search" placeholder="Поиск по сайту"></label>
+            </li>
+            <li class="menu__item"><a href="#">Корзина: пока пуста</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
+
+  <main class="main">
+
+    <h1 class="visually-hidden">Интернет-магазин Мишка</h1>
+
+    <section class="handwork">
+      <div class="handwork__title">
+        <p class="handwork__text">Милые штуки ручной работы для дома</p>
+      </div>
+        <table class="handwork__goods">
+          <tr>
+            <td class="handwork__title">
+              <p class="handwork__text">Предметы интерьера</p>
+            </td>
+            <td class="handwork__icon">
+              <img src="https://via.placeholder.com/150x150" width="40" height="62" alt="Предметы интерьера">
+            </td>
+          </tr>
+          <tr>
+            <td class="handwork__title">
+              <p class="handwork__text">Детские игрушки</p>
+            </td>
+            <td class="handwork__icon">
+              <img src="https://via.placeholder.com/150x150" width="60" height="60" alt="Детские игрушки">
+            </td>
+          </tr>
+        </table>
+    </section>
+
+    <section class="baskets">
+      
+    </section>
+
+  </main>
 </body>
 
 </html>
