created basket section and fixed handwork section

--- a/source/index.html
+++ b/source/index.html
@@ -38,28 +38,57 @@
       <div class="handwork__title">
         <p class="handwork__text">Милые штуки ручной работы для дома</p>
       </div>
-        <table class="handwork__goods">
-          <tr>
-            <td class="handwork__title">
-              <p class="handwork__text">Предметы интерьера</p>
-            </td>
-            <td class="handwork__icon">
-              <img src="https://via.placeholder.com/150x150" width="40" height="62" alt="Предметы интерьера">
-            </td>
-          </tr>
-          <tr>
-            <td class="handwork__title">
-              <p class="handwork__text">Детские игрушки</p>
-            </td>
-            <td class="handwork__icon">
-              <img src="https://via.placeholder.com/150x150" width="60" height="60" alt="Детские игрушки">
-            </td>
-          </tr>
-        </table>
+      <div class="handwork__goods">
+        <a href="#" class="handwork__interior">
+          <p class="handwork__text">Предметы интерьера</p>
+          <img src="https://via.placeholder.com/150x150" width="40" height="62" alt="Предметы интерьера">
+        </a>
+        <a href="#" class="handwork__toys">
+          <p class="handwork__text">Детские игрушки</p>
+          <img src="https://via.placeholder.com/150x150" width="60" height="60" alt="Детские игрушки">
+        </a>
+      </div>
     </section>
 
     <section class="baskets">
-      
+      <div class="container">
+        <div class="baskets__good">
+          <h2 class="baskets__title title">Вязаные корзинки</h2>
+          <p class="baskets__week">Товар недели</p>
+          <p class="baskets__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
+        </div>
+        <table class="baskets__desc">
+          <tr>
+            <td class="baskets__value">
+              <p>Цвет:</p>
+            </td>
+            <td class="baskets__field">
+              <p>«Тиффани»/серый</p>
+            </td>
+          </tr>
+          <tr>
+            <td class="baskets__value">
+              <p>Диаметр:</p>
+            </td>
+            <td class="baskets__field">
+              <p>25 см</p>
+            </td>
+          </tr>
+          <tr>
+            <td class="baskets__value">
+              <p>Высота:</p>
+            </td>
+            <td class="baskets__field">
+              <p>15 см</p>
+            </td>
+          </tr>
+        </table>
+        <div class="baskets__to-order">
+          <img class="baskets__image" src="https://via.placeholder.com/150x150" width="260" height="315" alt="Вязаные корзинки">
+          <p class="baskets__prise">Цена: 990 руб.</p>
+          <button class="baskets__order-btn" type="button">Заказать</button>
+        </div>
+      </div>
     </section>
 
   </main>
