--- a/source/index.html
+++ b/source/index.html
@@ -123,6 +123,22 @@
       </div>
     </section>
 
+    <section class="reviews">
+      <h2 class="reviews__title title">Отзывы</h2>
+      <div class="reviews__slider">
+        <p class="reviews__text">
+          Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+        </p>
+        <p class="reviews__name">Анастасия Красильникова</p>
+        <p class="reviews__account">@misssssiskras</p>
+      </div>
+      <div class="reviews__btn">
+        <button class="reviews__btn-prev" type="button">Предущий слайд</button>
+        <button class="reviews__btn-next" type="button">Следующий слайд</button>
+      </div>
+      <button type="button" class="reviews__write-btn">Написать</button>
+    </section>
+
   </main>
 </body>
 
