--- a/source/index.html
+++ b/source/index.html
@@ -86,7 +86,7 @@
         <div class="baskets__to-order">
           <img class="baskets__image" src="https://via.placeholder.com/150x150" width="260" height="315" alt="Вязаные корзинки">
           <p class="baskets__prise">Цена: 990 руб.</p>
-          <button class="baskets__order-btn" type="button">Заказать</button>
+          <button class="baskets__order-btn button" type="button">Заказать</button>
         </div>
       </div>
     </section>
@@ -136,10 +136,33 @@
         <button class="reviews__btn-prev" type="button">Предущий слайд</button>
         <button class="reviews__btn-next" type="button">Следующий слайд</button>
       </div>
-      <button type="button" class="reviews__write-btn">Написать</button>
+      <button type="button" class="reviews__write-btn button">Написать</button>
+    </section>
+
+    <section class="contacts">
+      <h2 class="contacts__title title">Контакты</h2>
+      <table class="contacts__desc">
+        <tr class="contacts__email">
+          <td>e-mail:</td>
+          <td>info@mimimishkashop.ru</td>
+        </tr>
+        <tr class="contacts__address">
+          <td>адрес:</td>
+          <td>
+            г. Санкт-Петербург,
+            ул. Большая Конюшенная,
+            д. 19/8, офис 101
+          </td>
+        </tr>
+      </table>
+      <div class="contacts__map">
+        <img src="https://via.placeholder.com/150x150" width="322" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+      </div>
+      <button class="contacts__btn button">Напишите нам</button>
     </section>
 
   </main>
+
 </body>
 
 </html>
