--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
   <header class="header">
     <div class="container">
       <a class="header__logo">
@@ -162,6 +163,30 @@
     </section>
 
   </main>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link-instagram" href="#">Instagram</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link-facebook" href="#">Facebook</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link-twitter" href="#">Twitter</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__copyright copyright">
+        <b class="copyright__text">Разработано</b>
+        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <img src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
+        </a>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
