--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
         <button class="menu__btn" type="button">Открыть меню</button>
         <div class="menu__toggle">
           <ul class="menu__list">
-            <li class="menu__item"><a>Каталог товаров</a></li>
+            <li class="menu__item"><a href="catalog.html">Каталог товаров</a></li>
             <li class="menu__item"><a href="#">Вязание на заказ</a></li>
             <li class="menu__item">
               <label><input type="search" placeholder="Поиск по сайту"></label>
