--- a/source/index.html
+++ b/source/index.html
@@ -37,7 +37,7 @@
 
     <section class="handwork">
       <div class="handwork__title">
-        <p class="handwork__text">Милые штуки ручной работы для дома</p>
+        <p class="handwork__text page-title">Милые штуки ручной работы для дома</p>
       </div>
       <div class="handwork__goods">
         <a href="#" class="handwork__interior">
@@ -134,8 +134,8 @@
         <p class="reviews__account">@misssssiskras</p>
       </div>
       <div class="reviews__btn">
-        <button class="reviews__btn-prev" type="button">Предущий слайд</button>
-        <button class="reviews__btn-next" type="button">Следующий слайд</button>
+        <button class="reviews__btn-prev" type="button" aria-label="Предущий слайд">Предущий слайд</button>
+        <button class="reviews__btn-next" type="button" aria-label="Следующий слайд">Следующий слайд</button>
       </div>
       <button type="button" class="reviews__write-btn button">Написать</button>
     </section>
@@ -169,13 +169,13 @@
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link social__link-instagram" href="#">Instagram</a>
+            <a class="social__link social__link-instagram" href="#" aria-label="Инстаграм">Instagram</a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link-facebook" href="#">Facebook</a>
+            <a class="social__link social__link-facebook" href="#" aria-label="Фейсбук">Facebook</a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link-twitter" href="#">Twitter</a>
+            <a class="social__link social__link-twitter" href="#" aria-label="Твитер">Twitter</a>
           </li>
         </ul>
       </div>
