add aria-label v2

--- a/source/index.html
+++ b/source/index.html
@@ -16,13 +16,13 @@
         <img src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка" class="header__image">
       </a>
       <nav class="menu">
-        <button class="menu__btn" type="button">Открыть меню</button>
+        <button class="menu__btn" type="button" aria-label="Открыть меню">Открыть меню</button>
         <div class="menu__toggle">
           <ul class="menu__list">
             <li class="menu__item"><a href="catalog.html">Каталог товаров</a></li>
             <li class="menu__item"><a href="#">Вязание на заказ</a></li>
             <li class="menu__item">
-              <label><input type="search" placeholder="Поиск по сайту"></label>
+              <label><input type="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту"></label>
             </li>
             <li class="menu__item"><a href="#">Корзина: пока пуста</a></li>
           </ul>
