--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,7 +12,7 @@
 
   <header class="header">
     <div class="container">
-      <a class="header__logo">
+      <a href="index.html" class="header__logo">
         <img src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка" class="header__image">
       </a>
       <nav class="menu">
