fix tel in form

--- a/source/form.html
+++ b/source/form.html
@@ -64,7 +64,7 @@
         </fieldset>
         <fieldset>
           <legend class="form__legend">Тел</legend>
-          <label><input type="tel" placeholder="+7 XXX XXX XX XX*" required></label>
+          <label><input type="tel" pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required></label>
         </fieldset>
         <fieldset>
           <legend class="form__legend">E-mail</legend>
