--- a/source/catalog.html
+++ b/source/catalog.html
@@ -114,4 +114,18 @@
     </div>
   </footer>
 
+  <section class="modal-add modal">
+    <p class="modal__title">Добавить в корзину</p>
+    <fieldset>
+      <legend class="modal__legend">Выберите размер:</legend>
+      <label for="size-s">S</label>
+      <label for="size-m">M</label>
+      <label for="size-l">L</label>
+      <input class="visually-hidden" id="size-s" type="radio" name="size">
+      <input class="visually-hidden" id="size-m" type="radio" name="size">
+      <input class="visually-hidden" id="size-l" type="radio" name="size">
+    </fieldset>
+    <button class="modal__btn button" type="button">Добавить</button>
+  </section>
+
 </body>
