--- a/source/form.html
+++ b/source/form.html
@@ -11,7 +11,7 @@
 <body>
 
   <header class="header">
-    <div class="container">
+    <div class="header__inner">
       <a href="index.html" class="header__logo">
         <img src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка" class="header__image">
       </a>
@@ -38,51 +38,53 @@
     </div>
 
     <section class="form">
-      <p class="form__text">
-        Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
-      </p>
-      <form action="https://echo.htmlacademy.ru">
-        <fieldset>
-          <legend class="form__legend">Тип</legend>
-          <label><input type="radio" name="type" checked>Аксессуар для интерьера</label>
-          <label><input type="radio" name="type">Детская игрушка</label>
-        </fieldset>
-        <fieldset>
-          <legend class="form__legend">Цвет</legend>
-          <label><input type="checkbox" checked>Белый</label>
-          <label><input type="checkbox" checked>Серый</label>
-          <label><input type="checkbox">«Тиффани»</label>
-          <label><input type="checkbox">Черный</label>
-          <label><input type="checkbox">Розовый</label>
-          <label><input type="checkbox">Оранжевый</label>
-        </fieldset>
-        <fieldset>
-          <legend class="form__legend">Фио</legend>
-          <label>Имя:<input type="text" placeholder="Введите ваше имя*"></label>
-          <label>Фамилия:<input type="text" placeholder="Укажите фамилию*"></label>
-          <label>Отчество:<input type="text" placeholder="Отчество, если желаете"></label>
-        </fieldset>
-        <fieldset>
-          <legend class="form__legend">Тел</legend>
-          <label><input type="tel" pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required></label>
-        </fieldset>
-        <fieldset>
-          <legend class="form__legend">E-mail</legend>
-          <label><input type="email" placeholder="Ваш Email*" required></label>
-        </fieldset>
-        <fieldset>
-          <legend class="form__legend">Доп</legend>
-          <label><textarea name="form-text" id="form-text" cols="30" rows="10" placeholder="Опишите все ваши пожелания к заказу"></textarea></label>
-        </fieldset>
-        <p class="form__require"><sup>*</sup>Поля обязательны для заполнения</p>
-        <button class="form__btn button" type="submit">Отправить заказ</button>
-      </form>
+      <div class="form__inner">
+        <p class="form__text">
+          Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
+        </p>
+        <form action="https://echo.htmlacademy.ru">
+          <fieldset>
+            <legend class="form__legend">Тип</legend>
+            <label><input type="radio" name="type" checked>Аксессуар для интерьера</label>
+            <label><input type="radio" name="type">Детская игрушка</label>
+          </fieldset>
+          <fieldset>
+            <legend class="form__legend">Цвет</legend>
+            <label><input type="checkbox" checked>Белый</label>
+            <label><input type="checkbox" checked>Серый</label>
+            <label><input type="checkbox">«Тиффани»</label>
+            <label><input type="checkbox">Черный</label>
+            <label><input type="checkbox">Розовый</label>
+            <label><input type="checkbox">Оранжевый</label>
+          </fieldset>
+          <fieldset>
+            <legend class="form__legend">Фио</legend>
+            <label>Имя:<input type="text" placeholder="Введите ваше имя*"></label>
+            <label>Фамилия:<input type="text" placeholder="Укажите фамилию*"></label>
+            <label>Отчество:<input type="text" placeholder="Отчество, если желаете"></label>
+          </fieldset>
+          <fieldset>
+            <legend class="form__legend">Тел</legend>
+            <label><input type="tel" pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required></label>
+          </fieldset>
+          <fieldset>
+            <legend class="form__legend">E-mail</legend>
+            <label><input type="email" placeholder="Ваш Email*" required></label>
+          </fieldset>
+          <fieldset>
+            <legend class="form__legend">Доп</legend>
+            <label><textarea name="form-text" id="form-text" cols="30" rows="10" placeholder="Опишите все ваши пожелания к заказу"></textarea></label>
+          </fieldset>
+          <p class="form__require"><sup>*</sup>Поля обязательны для заполнения</p>
+          <button class="form__btn button" type="submit">Отправить заказ</button>
+        </form>
+      </div>
     </section>
 
   </main>
 
   <footer class="footer">
-    <div class="container">
+    <div class="footer__inner">
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
