--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header class="header">
-    <div class="container">
+    <div class="header__inner">
       <a class="header__logo">
         <img src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка" class="header__image">
       </a>
@@ -52,7 +52,7 @@
     </section>
 
     <section class="baskets">
-      <div class="container">
+      <div class="baskets__inner">
         <div class="baskets__good">
           <h2 class="baskets__title title">Вязаные корзинки</h2>
           <p class="baskets__week">Товар недели</p>
@@ -93,7 +93,7 @@
     </section>
 
     <section class="about-us">
-      <div class="container">
+      <div class="about-us__inner">
         <h2 class="about-us__title title">Коротко о нас:</h2>
         <ul class="about-us__list">
           <li class="about-us__item">
@@ -125,37 +125,41 @@
     </section>
 
     <section class="reviews">
-      <h2 class="reviews__title title">Отзывы</h2>
-      <div class="reviews__slider">
-        <p class="reviews__text">
-          Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
-        </p>
-        <p class="reviews__name">Анастасия Красильникова</p>
-        <p class="reviews__account">@misssssiskras</p>
+      <div class="reviews__inner">
+        <h2 class="reviews__title title">Отзывы</h2>
+        <div class="reviews__slider">
+          <p class="reviews__text">
+            Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+          </p>
+          <p class="reviews__name">Анастасия Красильникова</p>
+          <p class="reviews__account">@misssssiskras</p>
+        </div>
+        <div class="reviews__btn">
+          <button class="reviews__btn-prev" type="button" aria-label="Предущий слайд">Предущий слайд</button>
+          <button class="reviews__btn-next" type="button" aria-label="Следующий слайд">Следующий слайд</button>
+        </div>
+        <button type="button" class="reviews__write-btn button">Написать</button>
       </div>
-      <div class="reviews__btn">
-        <button class="reviews__btn-prev" type="button" aria-label="Предущий слайд">Предущий слайд</button>
-        <button class="reviews__btn-next" type="button" aria-label="Следующий слайд">Следующий слайд</button>
-      </div>
-      <button type="button" class="reviews__write-btn button">Написать</button>
     </section>
 
     <section class="contacts">
-      <h2 class="contacts__title title">Контакты</h2>
-      <table class="contacts__desc">
-        <tr class="contacts__email">
-          <td>e-mail:</td>
-          <td>info@mimimishkashop.ru</td>
-        </tr>
-        <tr class="contacts__address">
-          <td>адрес:</td>
-          <td>
-            г. Санкт-Петербург,
-            ул. Большая Конюшенная,
-            д. 19/8, офис 101
-          </td>
-        </tr>
-      </table>
+      <div class="contacts__inner">
+        <h2 class="contacts__title title">Контакты</h2>
+        <table class="contacts__desc">
+          <tr class="contacts__email">
+            <td>e-mail:</td>
+            <td>info@mimimishkashop.ru</td>
+          </tr>
+          <tr class="contacts__address">
+            <td>адрес:</td>
+            <td>
+              г. Санкт-Петербург,
+              ул. Большая Конюшенная,
+              д. 19/8, офис 101
+            </td>
+          </tr>
+        </table>
+      </div>
       <div class="contacts__map">
         <img src="https://via.placeholder.com/150x150" width="322" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
       </div>
@@ -165,7 +169,7 @@
   </main>
 
   <footer class="footer">
-    <div class="container">
+    <div class="footer__inner">
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
@@ -189,7 +193,8 @@
   </footer>
 
   <section class="modal-add modal">
-    <p class="modal__title">Добавить в корзину</p>
+    <div class="modal__inner">
+      <p class="modal__title">Добавить в корзину</p>
       <fieldset>
         <legend class="modal__legend">Выберите размер:</legend>
         <label for="size-s">S</label>
@@ -199,7 +204,8 @@
         <input class="visually-hidden" id="size-m" type="radio" name="size">
         <input class="visually-hidden" id="size-l" type="radio" name="size">
       </fieldset>
-    <button class="modal__btn button" type="button">Добавить</button>
+      <button class="modal__btn button" type="button">Добавить</button>
+    </div>
   </section>
 
 </body>
