--- a/source/index.html
+++ b/source/index.html
@@ -13,17 +13,17 @@
   <header class="header">
     <div class="header__inner">
       <a class="header__logo">
-        <img src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка" class="header__image">
+        <img class="header__image" src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
       <nav class="menu">
         <button class="menu__btn" type="button" aria-label="Открыть меню">Открыть меню</button>
         <ul class="menu__list">
-          <li class="menu__item"><a href="catalog.html">Каталог товаров</a></li>
-          <li class="menu__item"><a href="#">Вязание на заказ</a></li>
+          <li class="menu__item"><a class="menu__link" href="catalog.html">Каталог товаров</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Вязание на заказ</a></li>
           <li class="menu__item">
             <label><input type="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту"></label>
           </li>
-          <li class="menu__item"><a href="#">Корзина: пока пуста</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Корзина: пока пуста</a></li>
         </ul>
       </nav>
     </div>
@@ -159,7 +159,7 @@
         </table>
       </div>
       <div class="contacts__map">
-        <img src="https://via.placeholder.com/150x150" width="322" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+        <img class="contacts__image" src="https://via.placeholder.com/150x150" width="322" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
       </div>
       <button class="contacts__btn button">Напишите нам</button>
     </section>
@@ -184,7 +184,7 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
+          <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
         </a>
       </div>
     </div>
