deleted span - add img

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -48,7 +48,7 @@
             <p class="catalog__text">Рост 30 см, вес 200 г</p>
             <div class="catalog__price">
               <p class="catalog__money">1200 руб.</p>
-              <span class="catalog__icon"></span>
+              <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
             </div>
           </li>
           <li class="catalog__item">
@@ -59,7 +59,7 @@
             <p class="catalog__text">Диаметр 15 см, высота 10 см</p>
             <div class="catalog__price">
               <p class="catalog__money">690 руб.</p>
-              <span class="catalog__icon"></span>
+              <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
             </div>
           </li>
           <li class="catalog__item">
@@ -70,7 +70,7 @@
             <p class="catalog__text">Диаметр 30 см, высота 30 см</p>
             <div class="catalog__price">
               <p class="catalog__money">1500 руб.</p>
-              <span class="catalog__icon"></span>
+              <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
             </div>
           </li>
           <li class="catalog__item">
