--- a/source/form.html
+++ b/source/form.html
@@ -31,6 +31,8 @@
 
   <main class="main">
 
+    <h1 class="visually-hidden">Интернет-магазин Мишка - форма заказа</h1>
+
     <div class="title">
       <p class="title__text page-title">Вязание на заказ</p>
     </div>
