--- a/source/index.html
+++ b/source/index.html
@@ -31,7 +31,7 @@
 
   <main class="main">
 
-    <h1 class="visually-hidden">Интернет-магазин Мишка</h1>
+    <h1 class="visually-hidden">Интернет-магазин Мишка - главная страница</h1>
 
     <section class="handwork">
       <div class="handwork__title">
