--- a/source/catalog.html
+++ b/source/catalog.html
@@ -31,7 +31,7 @@
 
   <main class="main">
 
-    <h1 class="visually-hidden">Каталог товаров интернет-магазина Мишка</h1>
+    <h1 class="visually-hidden">Интернет-магазин Мишка - каталог товаров</h1>
 
     <div class="title">
       <p class="title__text page-title">Каталог товаров</p>
