--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,6 +10,7 @@
 
 <body>
 
+  <!-- Шапка сайта -->
   <header class="header">
     <div class="header__inner">
       <a class="header__logo" href="index.html">
@@ -29,14 +30,17 @@
     </div>
   </header>
 
+  <!-- Основной контент сайта -->
   <main class="main">
 
+    <!-- Для ридера -->
     <h1 class="visually-hidden">Интернет-магазин Мишка - каталог товаров</h1>
 
     <div class="title">
       <p class="title__text page-title">Каталог товаров</p>
     </div>
 
+<!-- Секция каталога -->
     <section class="catalog">
       <div class="catalog__inner">
         <ul class="catalog__list">
@@ -88,6 +92,7 @@
 
   </main>
 
+  <!-- Подвал сайта -->
   <footer class="footer">
     <div class="footer__inner">
       <div class="footer__social social">
@@ -112,6 +117,7 @@
     </div>
   </footer>
 
+  <!-- Секция модального окна -->
   <section class="modal-add modal">
     <div class="modal__inner">
       <p class="modal__title">Добавить в корзину</p>
