--- a/source/form.html
+++ b/source/form.html
@@ -10,6 +10,7 @@
 
 <body>
 
+  <!-- Шапка сайта -->
   <header class="header">
     <div class="header__inner">
       <a href="index.html" class="header__logo">
@@ -29,14 +30,17 @@
     </div>
   </header>
 
+  <!-- Основной контент сайта -->
   <main class="main">
 
+    <!-- Для ридера -->
     <h1 class="visually-hidden">Интернет-магазин Мишка - форма заказа</h1>
 
     <div class="title">
       <p class="title__text page-title">Вязание на заказ</p>
     </div>
 
+<!-- Секция формы заказа -->
     <section class="form">
       <div class="form__inner">
         <p class="form__text">
@@ -83,6 +87,7 @@
 
   </main>
 
+  <!-- Подвал сайта -->
   <footer class="footer">
     <div class="footer__inner">
       <div class="footer__social social">
