--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,7 @@
 
 <body>
 
+  <!-- Шапка сайта -->
   <header class="header">
     <div class="header__inner">
       <a class="header__logo">
@@ -29,10 +30,13 @@
     </div>
   </header>
 
+  <!-- Основной контент сайта -->
   <main class="main">
 
+    <!-- Для ридера -->
     <h1 class="visually-hidden">Интернет-магазин Мишка - главная страница</h1>
 
+<!-- Секция ручной работы -->
     <section class="handwork">
       <div class="handwork__title">
         <p class="handwork__text page-title">Милые штуки ручной работы для дома</p>
@@ -49,6 +53,7 @@
       </div>
     </section>
 
+<!-- Секция вязаных корзинок -->
     <section class="baskets">
       <div class="baskets__inner">
         <div class="baskets__good">
@@ -90,6 +95,7 @@
       </div>
     </section>
 
+<!-- Секция о нас -->
     <section class="about-us">
       <div class="about-us__inner">
         <h2 class="about-us__title title">Коротко о нас:</h2>
@@ -122,6 +128,7 @@
       </div>
     </section>
 
+<!-- Секция отзывов -->
     <section class="reviews">
       <div class="reviews__inner">
         <h2 class="reviews__title title">Отзывы</h2>
@@ -140,6 +147,7 @@
       </div>
     </section>
 
+<!-- Секция контактов -->
     <section class="contacts">
       <div class="contacts__inner">
         <h2 class="contacts__title title">Контакты</h2>
@@ -166,6 +174,7 @@
 
   </main>
 
+  <!-- Подвал сайта -->
   <footer class="footer">
     <div class="footer__inner">
       <div class="footer__social social">
@@ -190,6 +199,7 @@
     </div>
   </footer>
 
+  <!-- Секция модального окна -->
   <section class="modal-add modal">
     <div class="modal__inner">
       <p class="modal__title">Добавить в корзину</p>
