--- a/3/form.html
+++ b/3/form.html
@@ -5,85 +5,92 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>HTML Academy: Мишка</title>
+  <title>HTML Academy: Мишка - форма заказа</title>
   <base href="https://htmlacademy-adaptive.github.io/976089-mishka-18/3/">
 </head>
 
 <body>
 
+  <!-- Шапка сайта -->
   <header class="header">
-    <div class="container">
+    <div class="header__inner">
       <a href="index.html" class="header__logo">
-        <img src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка" class="header__image">
+        <img class="header__image" src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
       <nav class="menu">
         <button class="menu__btn" type="button" aria-label="Открыть меню">Открыть меню</button>
-        <div class="menu__toggle">
-          <ul class="menu__list">
-            <li class="menu__item"><a href="catalog.html">Каталог товаров</a></li>
-            <li class="menu__item"><a href="#">Вязание на заказ</a></li>
-            <li class="menu__item">
-              <label><input type="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту"></label>
-            </li>
-            <li class="menu__item"><a href="#">Корзина: пока пуста</a></li>
-          </ul>
-        </div>
+        <ul class="menu__list">
+          <li class="menu__item"><a class="menu__link" href="catalog.html">Каталог товаров</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Вязание на заказ</a></li>
+          <li class="menu__item">
+            <label><input type="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту"></label>
+          </li>
+          <li class="menu__item"><a class="menu__link" href="#">Корзина: пока пуста</a></li>
+        </ul>
       </nav>
     </div>
   </header>
 
+  <!-- Основной контент сайта -->
   <main class="main">
+
+    <!-- Для ридера -->
+    <h1 class="visually-hidden">Интернет-магазин Мишка - форма заказа</h1>
 
     <div class="title">
       <p class="title__text page-title">Вязание на заказ</p>
     </div>
 
+<!-- Секция формы заказа -->
     <section class="form">
-      <p class="form__text">
-        Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
-      </p>
-      <form action="https://echo.htmlacademy.ru">
-        <fieldset>
-          <legend class="form__legend">Тип</legend>
-          <label><input type="radio" name="type" checked>Аксессуар для интерьера</label>
-          <label><input type="radio" name="type">Детская игрушка</label>
-        </fieldset>
-        <fieldset>
-          <legend class="form__legend">Цвет</legend>
-          <label><input type="checkbox" checked>Белый</label>
-          <label><input type="checkbox" checked>Серый</label>
-          <label><input type="checkbox">«Тиффани»</label>
-          <label><input type="checkbox">Черный</label>
-          <label><input type="checkbox">Розовый</label>
-          <label><input type="checkbox">Оранжевый</label>
-        </fieldset>
-        <fieldset>
-          <legend class="form__legend">Фио</legend>
-          <label>Имя:<input type="text" placeholder="Введите ваше имя*"></label>
-          <label>Фамилия:<input type="text" placeholder="Укажите фамилию*"></label>
-          <label>Отчество:<input type="text" placeholder="Отчество, если желаете"></label>
-        </fieldset>
-        <fieldset>
-          <legend class="form__legend">Тел</legend>
-          <label><input type="tel" pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required></label>
-        </fieldset>
-        <fieldset>
-          <legend class="form__legend">E-mail</legend>
-          <label><input type="email" placeholder="Ваш Email*" required></label>
-        </fieldset>
-        <fieldset>
-          <legend class="form__legend">Доп</legend>
-          <label><textarea name="form-text" id="form-text" cols="30" rows="10" placeholder="Опишите все ваши пожелания к заказу"></textarea></label>
-        </fieldset>
-        <p class="form__require"><sup>*</sup>Поля обязательны для заполнения</p>
-        <button class="form__btn button" type="submit">Отправить заказ</button>
-      </form>
+      <div class="form__inner">
+        <p class="form__text">
+          Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
+        </p>
+        <form action="https://echo.htmlacademy.ru">
+          <fieldset>
+            <legend class="form__legend">Тип</legend>
+            <label><input type="radio" name="type" checked>Аксессуар для интерьера</label>
+            <label><input type="radio" name="type">Детская игрушка</label>
+          </fieldset>
+          <fieldset>
+            <legend class="form__legend">Цвет</legend>
+            <label><input type="checkbox" checked>Белый</label>
+            <label><input type="checkbox" checked>Серый</label>
+            <label><input type="checkbox">«Тиффани»</label>
+            <label><input type="checkbox">Черный</label>
+            <label><input type="checkbox">Розовый</label>
+            <label><input type="checkbox">Оранжевый</label>
+          </fieldset>
+          <fieldset>
+            <legend class="form__legend">Фио</legend>
+            <label>Имя:<input type="text" placeholder="Введите ваше имя*"></label>
+            <label>Фамилия:<input type="text" placeholder="Укажите фамилию*"></label>
+            <label>Отчество:<input type="text" placeholder="Отчество, если желаете"></label>
+          </fieldset>
+          <fieldset>
+            <legend class="form__legend">Тел</legend>
+            <label><input type="tel" pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required></label>
+          </fieldset>
+          <fieldset>
+            <legend class="form__legend">E-mail</legend>
+            <label><input type="email" placeholder="Ваш Email*" required></label>
+          </fieldset>
+          <fieldset>
+            <legend class="form__legend">Доп</legend>
+            <label><textarea name="form-text" id="form-text" cols="30" rows="10" placeholder="Опишите все ваши пожелания к заказу"></textarea></label>
+          </fieldset>
+          <p class="form__require"><sup>*</sup>Поля обязательны для заполнения</p>
+          <button class="form__btn button" type="submit">Отправить заказ</button>
+        </form>
+      </div>
     </section>
 
   </main>
 
+  <!-- Подвал сайта -->
   <footer class="footer">
-    <div class="container">
+    <div class="footer__inner">
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
@@ -100,7 +107,7 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
+          <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
         </a>
       </div>
     </div>
