--- a/3/index.html
+++ b/3/index.html
@@ -5,37 +5,39 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>HTML Academy: Мишка</title>
+  <title>HTML Academy: Мишка - главная</title>
   <base href="https://htmlacademy-adaptive.github.io/976089-mishka-18/3/">
 </head>
 
 <body>
 
+  <!-- Шапка сайта -->
   <header class="header">
-    <div class="container">
+    <div class="header__inner">
       <a class="header__logo">
-        <img src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка" class="header__image">
+        <img class="header__image" src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
       <nav class="menu">
         <button class="menu__btn" type="button" aria-label="Открыть меню">Открыть меню</button>
-        <div class="menu__toggle">
-          <ul class="menu__list">
-            <li class="menu__item"><a href="catalog.html">Каталог товаров</a></li>
-            <li class="menu__item"><a href="#">Вязание на заказ</a></li>
-            <li class="menu__item">
-              <label><input type="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту"></label>
-            </li>
-            <li class="menu__item"><a href="#">Корзина: пока пуста</a></li>
-          </ul>
-        </div>
+        <ul class="menu__list">
+          <li class="menu__item"><a class="menu__link" href="catalog.html">Каталог товаров</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Вязание на заказ</a></li>
+          <li class="menu__item">
+            <label><input type="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту"></label>
+          </li>
+          <li class="menu__item"><a class="menu__link" href="#">Корзина: пока пуста</a></li>
+        </ul>
       </nav>
     </div>
   </header>
 
+  <!-- Основной контент сайта -->
   <main class="main">
 
-    <h1 class="visually-hidden">Интернет-магазин Мишка</h1>
+    <!-- Для ридера -->
+    <h1 class="visually-hidden">Интернет-магазин Мишка - главная страница</h1>
 
+<!-- Секция ручной работы -->
     <section class="handwork">
       <div class="handwork__title">
         <p class="handwork__text page-title">Милые штуки ручной работы для дома</p>
@@ -52,8 +54,9 @@
       </div>
     </section>
 
+<!-- Секция вязаных корзинок -->
     <section class="baskets">
-      <div class="container">
+      <div class="baskets__inner">
         <div class="baskets__good">
           <h2 class="baskets__title title">Вязаные корзинки</h2>
           <p class="baskets__week">Товар недели</p>
@@ -93,8 +96,9 @@
       </div>
     </section>
 
+<!-- Секция о нас -->
     <section class="about-us">
-      <div class="container">
+      <div class="about-us__inner">
         <h2 class="about-us__title title">Коротко о нас:</h2>
         <ul class="about-us__list">
           <li class="about-us__item">
@@ -125,48 +129,55 @@
       </div>
     </section>
 
+<!-- Секция отзывов -->
     <section class="reviews">
-      <h2 class="reviews__title title">Отзывы</h2>
-      <div class="reviews__slider">
-        <p class="reviews__text">
-          Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
-        </p>
-        <p class="reviews__name">Анастасия Красильникова</p>
-        <p class="reviews__account">@misssssiskras</p>
+      <div class="reviews__inner">
+        <h2 class="reviews__title title">Отзывы</h2>
+        <div class="reviews__slider">
+          <p class="reviews__text">
+            Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+          </p>
+          <p class="reviews__name">Анастасия Красильникова</p>
+          <p class="reviews__account">@misssssiskras</p>
+        </div>
+        <div class="reviews__btn">
+          <button class="reviews__btn-prev" type="button" aria-label="Предущий слайд">Предущий слайд</button>
+          <button class="reviews__btn-next" type="button" aria-label="Следующий слайд">Следующий слайд</button>
+        </div>
+        <button type="button" class="reviews__write-btn button">Написать</button>
       </div>
-      <div class="reviews__btn">
-        <button class="reviews__btn-prev" type="button" aria-label="Предущий слайд">Предущий слайд</button>
-        <button class="reviews__btn-next" type="button" aria-label="Следующий слайд">Следующий слайд</button>
-      </div>
-      <button type="button" class="reviews__write-btn button">Написать</button>
     </section>
 
+<!-- Секция контактов -->
     <section class="contacts">
-      <h2 class="contacts__title title">Контакты</h2>
-      <table class="contacts__desc">
-        <tr class="contacts__email">
-          <td>e-mail:</td>
-          <td>info@mimimishkashop.ru</td>
-        </tr>
-        <tr class="contacts__address">
-          <td>адрес:</td>
-          <td>
-            г. Санкт-Петербург,
-            ул. Большая Конюшенная,
-            д. 19/8, офис 101
-          </td>
-        </tr>
-      </table>
+      <div class="contacts__inner">
+        <h2 class="contacts__title title">Контакты</h2>
+        <table class="contacts__desc">
+          <tr class="contacts__email">
+            <td>e-mail:</td>
+            <td>info@mimimishkashop.ru</td>
+          </tr>
+          <tr class="contacts__address">
+            <td>адрес:</td>
+            <td>
+              г. Санкт-Петербург,
+              ул. Большая Конюшенная,
+              д. 19/8, офис 101
+            </td>
+          </tr>
+        </table>
+      </div>
       <div class="contacts__map">
-        <img src="https://via.placeholder.com/150x150" width="322" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+        <img class="contacts__image" src="https://via.placeholder.com/150x150" width="322" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
       </div>
       <button class="contacts__btn button">Напишите нам</button>
     </section>
 
   </main>
 
+  <!-- Подвал сайта -->
   <footer class="footer">
-    <div class="container">
+    <div class="footer__inner">
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
@@ -183,14 +194,16 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
+          <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
         </a>
       </div>
     </div>
   </footer>
 
+  <!-- Секция модального окна -->
   <section class="modal-add modal">
-    <p class="modal__title">Добавить в корзину</p>
+    <div class="modal__inner">
+      <p class="modal__title">Добавить в корзину</p>
       <fieldset>
         <legend class="modal__legend">Выберите размер:</legend>
         <label for="size-s">S</label>
@@ -200,7 +213,8 @@
         <input class="visually-hidden" id="size-m" type="radio" name="size">
         <input class="visually-hidden" id="size-l" type="radio" name="size">
       </fieldset>
-    <button class="modal__btn button" type="button">Добавить</button>
+      <button class="modal__btn button" type="button">Добавить</button>
+    </div>
   </section>
 
 </body>
