fixed header logo

--- a/source/form.html
+++ b/source/form.html
@@ -13,7 +13,7 @@
   <!-- Шапка сайта -->
   <header class="header">
     <div class="header__inner">
-      <a href="index.html" class="header__logo">
+      <a class="header__logo logo" href="index.html">
         <img class="header__image" src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
       <nav class="menu">
