fixed header logo v2

--- a/source/index.html
+++ b/source/index.html
@@ -14,13 +14,13 @@
   <header class="header">
     <div class="header__inner">
       <a class="header__logo logo">
-        <img class="header__image" src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка">
+        <img class="logo__image" src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
       <nav class="menu">
         <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Открыть меню</button>
         <ul class="menu__list">
           <li class="menu__item"><a class="menu__link" href="catalog.html">Каталог товаров</a></li>
-          <li class="menu__item"><a class="menu__link" href="#">Вязание на заказ</a></li>
+          <li class="menu__item"><a class="menu__link" href="form.html">Вязание на заказ</a></li>
           <li class="menu__item">
             <label><input type="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту"></label>
           </li>
