fixed address tag

--- a/source/index.html
+++ b/source/index.html
@@ -138,7 +138,7 @@
             Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
           </p>
           <p class="reviews__name">Анастасия Красильникова</p>
-          <p class="reviews__account">@misssssiskras</p>
+          <address class="reviews__account">@misssssiskras</address>
         </div>
         <div class="reviews__btn">
           <button class="reviews__btn-prev" type="button" aria-label="Предущий слайд">Предущий слайд</button>
