--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,8 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>HTML Academy: Мишка - форма заказа</title>
-
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
   <header class="header">
     <div class="header__inner">
       <a class="header__logo logo" href="index.html">
-        <img class="logo__image" src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка">
+        <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
       <nav class="header__menu menu">
         <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Открыть меню</button>
