fixed normalize and create menu style

--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>HTML Academy: Мишка - главная</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
@@ -25,7 +24,7 @@
           <li class="menu__item"><a class="menu__link" href="catalog.html">Каталог товаров</a></li>
           <li class="menu__item"><a class="menu__link" href="form.html">Вязание на заказ</a></li>
           <li class="menu__item">
-            <label><input type="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту"></label>
+            <label><input class="menu__item-search" type="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту"></label>
           </li>
           <li class="menu__item"><a class="menu__link" href="#">Корзина: пока пуста</a></li>
         </ul>
