finish handwork section and fixed bugs

--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>HTML Academy: Мишка - главная</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
@@ -41,16 +42,16 @@
 <!-- Секция ручной работы -->
     <section class="handwork">
       <div class="handwork__title">
-        <p class="handwork__text page-title">Милые штуки ручной работы для дома</p>
+        <p class="handwork__text page-title">Милые штуки ручной <br> работы для дома</p>
       </div>
       <div class="handwork__goods">
         <a href="#" class="handwork__interior">
           <p class="handwork__text">Предметы интерьера</p>
-          <img src="https://via.placeholder.com/150x150" width="40" height="62" alt="Предметы интерьера">
+          <img class="handwork__image-itn" src="https://via.placeholder.com/150x150" width="40" height="62" alt="Предметы интерьера">
         </a>
         <a href="#" class="handwork__toys">
           <p class="handwork__text">Детские игрушки</p>
-          <img src="https://via.placeholder.com/150x150" width="60" height="60" alt="Детские игрушки">
+          <img class="handwork__image-toys" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Детские игрушки">
         </a>
       </div>
     </section>
@@ -169,7 +170,7 @@
         </table>
       </div>
       <div class="contacts__map">
-        <img class="contacts__image" src="https://via.placeholder.com/150x150" width="322" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+        <img class="contacts__image" src="https://via.placeholder.com/150x150" width="320" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
       </div>
       <button class="contacts__btn button">Напишите нам</button>
     </section>
