fixed bugs in handwork text

--- a/source/index.html
+++ b/source/index.html
@@ -47,11 +47,11 @@
       <div class="handwork__goods">
         <a href="#" class="handwork__interior">
           <p class="handwork__text">Предметы интерьера</p>
-          <img class="handwork__image-itn" src="https://via.placeholder.com/150x150" width="40" height="62" alt="Предметы интерьера">
+          <img class="handwork__image-itn" src="img/icon-interior.svg" width="40" height="62" alt="Предметы интерьера">
         </a>
         <a href="#" class="handwork__toys">
           <p class="handwork__text">Детские игрушки</p>
-          <img class="handwork__image-toys" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Детские игрушки">
+          <img class="handwork__image-toys" src="img/icon-toy.svg" width="60" height="60" alt="Детские игрушки">
         </a>
       </div>
     </section>
