created baskets section

--- a/source/index.html
+++ b/source/index.html
@@ -45,13 +45,17 @@
         <p class="handwork__text page-title">Милые штуки ручной <br> работы для дома</p>
       </div>
       <div class="handwork__goods">
-        <a href="#" class="handwork__interior">
-          <p class="handwork__text">Предметы интерьера</p>
-          <img class="handwork__image-itn" src="img/icon-interior.svg" width="40" height="62" alt="Предметы интерьера">
+        <a href="catalog.html" class="handwork__interior">
+          <div class="handwork__inner">
+            <p class="handwork__text">Предметы интерьера</p>
+            <img class="handwork__image-itn" src="img/icon-interior.svg" width="40" height="62" alt="Предметы интерьера">
+          </div>
         </a>
-        <a href="#" class="handwork__toys">
-          <p class="handwork__text">Детские игрушки</p>
-          <img class="handwork__image-toys" src="img/icon-toy.svg" width="60" height="60" alt="Детские игрушки">
+        <a href="catalog.html" class="handwork__toys">
+          <div class="handwork__inner">
+            <p class="handwork__text">Детские игрушки</p>
+            <img class="handwork__image-toys" src="img/icon-toy.svg" width="60" height="60" alt="Детские игрушки">
+          </div>
         </a>
       </div>
     </section>
@@ -65,7 +69,7 @@
           <p class="baskets__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
         </div>
         <table class="baskets__desc">
-          <tr>
+          <tr class="baskets__table">
             <td class="baskets__value">
               <p>Цвет:</p>
             </td>
@@ -73,7 +77,7 @@
               <p>«Тиффани»/серый</p>
             </td>
           </tr>
-          <tr>
+          <tr class="baskets__table">
             <td class="baskets__value">
               <p>Диаметр:</p>
             </td>
@@ -81,7 +85,7 @@
               <p>25 см</p>
             </td>
           </tr>
-          <tr>
+          <tr class="baskets__table">
             <td class="baskets__value">
               <p>Высота:</p>
             </td>
